2013-11-21  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkrescue.c (main): If a source directory is not
	specified, read platform-specific files from subdirectories of
	pkglibdir, not pkgdatadir.

2013-11-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/normal/progress.c: Remove unused file.

2013-11-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/crypto.c (grub_crypto_hash): Remove variable length
	array.

2013-11-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig.in: Say explicit "grub configuration" rather
	than grub.cfg.

2013-11-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* coreboot.cfg: Add missing file.

2013-11-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am: Allow STRIP to be empty when creating windowszip.

2013-11-19  Axel Kellermann <axel.kellermann@gmx.de>

	* util/grub.d/30_os-prober.in: Add GRUB_OS_PROBER_SKIP_LIST to
	selectively skipping systems.

2013-11-19  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.util.def (grub-mkimage): Add
	grub-core/osdep/aros/config.c to extra_dist.
	* conf/Makefile.extra-dist (EXTRA_DIST): Add docs/autoiso.cfg,
	docs/osdetect.cfg, grub-core/gnulib-fix-null-deref.diff,
	grub-core/gnulib-fix-width.diff, grub-core/gnulib-no-abort.diff, and
	grub-core/gnulib-no-gets.diff.

2013-11-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Add automated filesystem checking based on scripts I've used now for
	quite some time locally. Most of the test require root so they are
	skipped when run without necessarry privelegies.

2013-11-19  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install.c (main): Adjust info messages to match
	installed paths of grub-bios-setup and grub-sparc64-setup.

2013-11-19  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install-common.c (copy_locales): Consistently use
	grub_util_get_localedir () rather than LOCALEDIR.
	(grub_install_copy_files): Likewise.

2013-11-19  Josh Triplett  <josh@joshtriplett.org>
