@@ -1,3 +1,8 @@
+2013-11-21  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	Unify GOT/trampoline handling between PPC, MIPS and IA64 as they
+	do essentially the same thing, do it in similar way.
+
 2013-11-21  Colin Watson  <cjwatson@ubuntu.com>
 
 	* util/grub-mkrescue.c (main): If a source directory is not
